fix: letter spacing in header

--- a/components/KawaiiHeader/KawaiiHeader.css
+++ b/components/KawaiiHeader/KawaiiHeader.css
@@ -7,7 +7,7 @@
   display: flex;
   align-items: center;
 
-  letter-spacing: 3px;
+  letter-spacing: 2px;
 }
 
 .modalHeader {
